fix center align

--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,7 @@ h1 {
   text-shadow: -3px 3px #0004ff;
 }
 header {
-  text-align: left;
+  text-align: center;
   font-size: 20px;
   color: white;
   text-shadow: -2px 2px #000000;
@@ -18,6 +18,9 @@ header {
 img {
   width: 350px;
   border: 20px dotted #0000ff;
+  display: block;
+  margin: 0 auto;
+  max-width: 100%;
 }
 iframe {
   display: block;
@@ -29,7 +32,7 @@ iframe {
 }
 
 p {
-  text-align: left;
+  text-align: center;
 }
 
 h2 {
@@ -56,6 +59,7 @@ a:visited {
 
 a:hover {
   color: rgb(150, 255, 0);
+  text-align: center;
 }
 
 div.centered {
